--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,15 @@
 			<version>2.9.1</version>
 			<optional>true</optional>
 		</dependency>
+		
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+			<scope>compile</scope>
+			<optional>true</optional>
+		</dependency>
+		
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
