--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.2</version>
+        </dependency>
+		<dependency>
 			<groupId>org.mongodb</groupId>
 			<artifactId>mongo-java-driver</artifactId>
 			<version>2.9.1</version>
