User: Change structure Session array

--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
+			<groupId>user.agent.util</groupId>
+			<artifactId>user-agent-util</artifactId>
+			<version>1.6</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
 			<groupId>net.sf</groupId>
 			<artifactId>samtools</artifactId>
 			<version>1.72</version>
