Analysis: added manifest.json for variant

--- a/installation-dir/conf/analysis.properties
+++ b/installation-dir/conf/analysis.properties
@@ -4,14 +4,17 @@
 ANALYSIS.LOG.LEVEL = 1
 ANALYSIS.BINARIES.PATH = analysis
 
+
 #############################################
 #   EXECUTOR PARAMETERS
 #############################################
+
 ## JOB.EXECUTOR: LOCAL or SGE
 ANALYSIS.JOB.EXECUTOR = LOCAL
-#JOB.EXECUTOR = SGE
+#ANALYSIS.JOB.EXECUTOR = SGE
 
-##############################################
+
+#############################################
 #   SGE PARAMETERS
 #############################################
 
