--- a/pom.xml
+++ b/pom.xml
@@ -30,10 +30,10 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-            <groupId>commons-cli</groupId>
-            <artifactId>commons-cli</artifactId>
-            <version>1.2</version>
-        </dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>1.2</version>
+		</dependency>
 		<dependency>
 			<groupId>org.mongodb</groupId>
 			<artifactId>mongo-java-driver</artifactId>
@@ -47,7 +47,7 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>user.agent.util</groupId>
+			<groupId>nl.bitwalker</groupId>
 			<artifactId>user-agent-util</artifactId>
 			<version>1.6</version>
 			<scope>compile</scope>
