--- a/installation-dir/conf/account.properties
+++ b/installation-dir/conf/account.properties
@@ -10,7 +10,7 @@ GCSA.ACCOUNT.PATH = /accounts
 
 
 ## MongoDB properties
-GCSA.MONGO.IP = 127.0.0.1
+GCSA.MONGO.IP = mem15
 GCSA.MONGO.PORT = 27017
 GCSA.MONGO.USER =
 GCSA.MONGO.PASS = 
