CloudSessionManager properties cleanup

--- a/installation-dir/conf/account.properties
+++ b/installation-dir/conf/account.properties
@@ -1,6 +1,6 @@
 
 ### Installation path must be
-GCSA.ENV.PATH = GCSA_HOME
+GCSA.ENV.HOME = GCSA_HOME
 
 ## GCSA.USERS.MODE accept mongodb or file as value
 GCSA.ACCOUNT.MODE = mongodb
@@ -10,7 +10,7 @@ GCSA.ACCOUNT.PATH = /accounts
 
 
 ## MongoDB properties
-GCSA.MONGO.IP = 127.0.0.1
+GCSA.MONGO.HOST = 127.0.0.1
 GCSA.MONGO.PORT = 27017
 GCSA.MONGO.USER =
 GCSA.MONGO.PASS = 
