--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,8 @@
 			<groupId>org.mongodb</groupId>
 			<artifactId>mongo-java-driver</artifactId>
 			<version>2.10.1</version>
-			<optional>true</optional>
+<!-- 			<scope>compile</scope> -->
+<!-- 			<optional>true</optional> -->
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
