package db and io for accounts

--- a/installation-dir/conf/account.properties
+++ b/installation-dir/conf/account.properties
@@ -12,7 +12,7 @@ GCSA.ACCOUNT.PATH = /accounts
 TMP.PATH = /tmp
 
 ## MongoDB properties
-GCSA.MONGO.HOST = mem15
+GCSA.MONGO.HOST = localhost
 GCSA.MONGO.PORT = 27017
 GCSA.MONGO.USER =
 GCSA.MONGO.PASS = 
