--- a/installation-dir/analysis/hpg-variant/bin/hpg-variant.conf
+++ b/installation-dir/analysis/hpg-variant/bin/hpg-variant.conf
@@ -1,6 +1,7 @@
 # HPG Variant suite configuration file
 # One section per application:
 # - effect
+# - epistasis
 # - gwas: assoc, tdt
 # - vcf-tools: filter, merge, split, stats
 #
@@ -18,6 +19,14 @@ global:
 };
 
 effect:
+{
+    max-batches             = 10 ;
+    batch-lines             = 4000 ;
+    num-threads             = 4 ;
+    entries-per-thread      = 1000 ;
+};
+
+epistasis:
 {
     max-batches             = 10 ;
     batch-lines             = 4000 ;
