added job result, job file poll, and job file table web services

--- a/installation-dir/conf/analysis.properties
+++ b/installation-dir/conf/analysis.properties
@@ -10,8 +10,8 @@ ANALYSIS.BINARIES.PATH = analysis
 #############################################
 
 ## JOB.EXECUTOR: LOCAL or SGE
-ANALYSIS.JOB.EXECUTOR = LOCAL
-#ANALYSIS.JOB.EXECUTOR = SGE
+#ANALYSIS.JOB.EXECUTOR = LOCAL
+ANALYSIS.JOB.EXECUTOR = SGE
 
 
 #############################################
