--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.bioinfo</groupId>
+			<artifactId>bioinfo-tool</artifactId>
+			<version>0.9.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.bioinfo</groupId>
 			<artifactId>cellbase-lib</artifactId>
 			<version>2.1.1</version>
 			<scope>compile</scope>
