--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+		<dependency>
 			<groupId>org.bioinfo</groupId>
 			<artifactId>bioinfo-tool</artifactId>
 			<version>0.9.0</version>
