--- a/pom.xml
+++ b/pom.xml
@@ -47,8 +47,8 @@
 			<groupId>org.mongodb</groupId>
 			<artifactId>mongo-java-driver</artifactId>
 			<version>2.10.1</version>
-<!-- 			<scope>compile</scope> -->
-<!-- 			<optional>true</optional> -->
+			<!-- <scope>compile</scope> -->
+			<!-- <optional>true</optional> -->
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
@@ -65,6 +65,16 @@
 			<groupId>com.amazonaws</groupId>
 			<artifactId>aws-java-sdk</artifactId>
 			<version>1.3.19</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-core</artifactId>
+			<version>7.0.35</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-logging-juli</artifactId>
+			<version>7.0.35</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
