--- a/installation-dir/conf/localserver.properties
+++ b/installation-dir/conf/localserver.properties
@@ -2,4 +2,4 @@
 #   LOCAL SERVER MODE PARAMETERS
 #############################################
 LOCAL.PORT = 61976
-LOCAL.ALLOWED.FOLDERS = /home/fsalavert/tmp
+LOCAL.ALLOWED.FOLDERS = /home/fsalavert/Downloads
