cli getDirs updated, account bean role attribute added

--- a/installation-dir/conf/localserver.properties
+++ b/installation-dir/conf/localserver.properties
@@ -1,5 +1,8 @@
 #############################################
 #   LOCAL SERVER MODE PARAMETERS
 #############################################
-LOCAL.PORT = 61976
-LOCAL.ALLOWED.FOLDERS = /home/fsalavert/Downloads
+OCGA.LOCAL.PORT = 61976
+OCGA.LOCAL.FOLDERS.ALLOWED = /home/fsalavert/test,/home/fsalavert/test2
+OCGA.LOCAL.EXTENSIONS.ALLOWED = bam,vcf,gff,bed
+OCGA.LOCAL.COMPRESSION.ALLOWED = gz
+OCGA.LOCAL.EXPORT = true
