conf: prefix OPENCGA added to properties files

--- a/installation-dir/conf/account.properties
+++ b/installation-dir/conf/account.properties
@@ -1,20 +1,21 @@
 
 ### Installation path must be
-GCSA.ENV.HOME = GCSA_HOME
+OPENCGA.ENV.HOME = OPENCGA_HOME
 
-## GCSA.USERS.MODE accept mongodb or file as value
-GCSA.ACCOUNT.MODE = mongodb
+## OPENCGA.USERS.MODE accept mongodb or file as value
+OPENCGA.ACCOUNT.MODE = mongodb
 
-## Location where account files will be stored, relative to $GCSA_HOME
-GCSA.ACCOUNT.PATH = /accounts
+## Location where account files will be stored, relative to $OPENCGA_HOME
+OPENCGA.ACCOUNT.PATH = /accounts
 
 ## temporal folder
-TMP.PATH = /tmp
+OPENCGA.TMP.PATH = /tmp
 
 ## MongoDB properties
-GCSA.MONGO.HOST = mem15
-GCSA.MONGO.PORT = 27017
-GCSA.MONGO.USER =
-GCSA.MONGO.PASS = 
-GCSA.MONGO.DB = usertest
-GCSA.MONGO.COLLECTION = users
+OPENCGA.MONGO.DB = opencga
+OPENCGA.MONGO.COLLECTION = accounts
+OPENCGA.MONGO.HOST = webmaster
+OPENCGA.MONGO.PORT = 27017
+OPENCGA.MONGO.USER =
+OPENCGA.MONGO.PASS = 
+
