--- a/installation-dir/conf/analysis.properties
+++ b/installation-dir/conf/analysis.properties
@@ -1,8 +1,8 @@
 #############################################
 #   GENERAL PARAMETERS
 #############################################
-ANALYSIS.LOG.LEVEL = 1
-ANALYSIS.BINARIES.PATH = analysis
+OPENCGA.ANALYSIS.LOG.LEVEL = 1
+OPENCGA.ANALYSIS.BINARIES.PATH = analysis
 
 
 #############################################
@@ -11,7 +11,7 @@ ANALYSIS.BINARIES.PATH = analysis
 
 ## JOB.EXECUTOR: LOCAL or SGE
 #ANALYSIS.JOB.EXECUTOR = LOCAL
-ANALYSIS.JOB.EXECUTOR = SGE
+OPENCGA.ANALYSIS.JOB.EXECUTOR = SGE
 
 
 #############################################
@@ -19,10 +19,11 @@ ANALYSIS.JOB.EXECUTOR = SGE
 #############################################
 
 ## SGE configuration
-SGE.LOG.LEVEL = 1
-SGE.AVAILABLE.QUEUES = normal.q,mysql.q
-SGE.DEFAULT.QUEUE = normal.q
+OPENCGA.SGE.LOG.LEVEL = 1
+OPENCGA.SGE.AVAILABLE.QUEUES = normal.q,mysql.q
+OPENCGA.SGE.DEFAULT.QUEUE = normal.q
 
 ## tools
-SGE.NORMAL.Q.TOOLS = *
-SGE.MYSQL.Q.TOOLS = fatigo,fatiscan
+OPENCGA.SGE.NORMAL.Q.TOOLS = *
+OPENCGA.SGE.MYSQL.Q.TOOLS = fatigo,fatiscan
+
