--- a/installation-dir/conf/localserver.properties
+++ b/installation-dir/conf/localserver.properties
@@ -1,8 +1,9 @@
 #############################################
 #   LOCAL SERVER MODE PARAMETERS
 #############################################
-OCGA.LOCAL.PORT = 61976
-OCGA.LOCAL.FOLDERS.ALLOWED = /home/fsalavert/test,/home/fsalavert/test2
-OCGA.LOCAL.EXTENSIONS.ALLOWED = bam,vcf,gff,bed
-OCGA.LOCAL.COMPRESSION.ALLOWED = gz
-OCGA.LOCAL.EXPORT = true
+OPENCGA.LOCAL.PORT = 61976
+OPENCGA.LOCAL.FOLDERS.ALLOWED = /home/fsalavert/test,/home/fsalavert/test2
+OPENCGA.LOCAL.EXTENSIONS.ALLOWED = bam,vcf,gff,bed
+OPENCGA.LOCAL.COMPRESSION.ALLOWED = gz
+OPENCGA.LOCAL.EXPORT = true
+
