MongoDB puser and password set

--- a/installation-dir/conf/account.properties
+++ b/installation-dir/conf/account.properties
@@ -16,6 +16,6 @@ OPENCGA.MONGO.DB = opencga
 OPENCGA.MONGO.COLLECTION = accounts
 OPENCGA.MONGO.HOST = webmaster
 OPENCGA.MONGO.PORT = 27017
-OPENCGA.MONGO.USER =
-OPENCGA.MONGO.PASS = 
+OPENCGA.MONGO.USER = opencga_user
+OPENCGA.MONGO.PASS = Opencga_Pass
 
