--- a/pom.xml
+++ b/pom.xml
@@ -171,7 +171,7 @@
 									<fileset dir="installation" includes="**" /> </copy> -->
 								<exec executable="tar">
 									<arg value="-zcvf" />
-									<arg value="opencga-cloud.tar.gz" />
+									<arg value="opencga-cloud-${project.version}.tar.gz" />
 									<arg value="${installation.server}" />
 								</exec>
 							</target>
@@ -211,7 +211,7 @@
 									<fileset dir="installation" includes="**" /> </copy> -->
 								<exec executable="tar">
 									<arg value="-zcvf" />
-									<arg value="opencga-light.tar.gz" />
+									<arg value="opencga-light-${project.version}.tar.gz" />
 									<arg value="${installation.local}" />
 								</exec>
 							</target>
