--- a/opencga-cloud/conf/analysis.properties
+++ b/opencga-cloud/conf/analysis.properties
@@ -27,3 +27,8 @@ OPENCGA.SGE.DEFAULT.QUEUE = normal.q
 OPENCGA.SGE.NORMAL.Q.TOOLS = *
 OPENCGA.SGE.MYSQL.Q.TOOLS = fatigo,fatiscan
 
+
+#############################################
+#   Cellbase PARAMETERS
+#############################################
+CELLBASE.HOST = mem12:8080
