--- a/opencga-cloud/conf/account.properties
+++ b/opencga-cloud/conf/account.properties
@@ -5,11 +5,12 @@ OPENCGA.ENV.HOME = OPENCGA_HOME
 ## OPENCGA.USERS.MODE accept mongodb or file as value
 OPENCGA.ACCOUNT.MODE = mongodb
 
-## Location where account files will be stored, relative to $OPENCGA_HOME
+## Location where account files will be stored
 OPENCGA.ACCOUNT.PATH = /httpd/bioinfo/opencga/accounts
 
 ## temporal folder
 OPENCGA.TMP.PATH = /tmp
+
 
 ## MongoDB properties
 OPENCGA.MONGO.DB = opencga
