--- a/opencga-cloud/conf/analysis.properties
+++ b/opencga-cloud/conf/analysis.properties
@@ -31,4 +31,5 @@ OPENCGA.SGE.MYSQL.Q.TOOLS = fatigo,fatiscan
 #############################################
 #   Cellbase PARAMETERS
 #############################################
-CELLBASE.HOST = mem12:8080
+#CELLBASE.HOST = mem12:8080
+CELLBASE.HOST = ws.bionifo.cipf.es
