--- a/pom.xml
+++ b/pom.xml
@@ -30,12 +30,6 @@
 			<version>1.4.5</version>
 		</dependency>
 		<dependency>
-			<groupId>org.bioinfo</groupId>
-			<artifactId>bioinfo-formats</artifactId>
-			<version>0.4.0</version>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
 			<groupId>commons-cli</groupId>
 			<artifactId>commons-cli</artifactId>
 			<version>1.2</version>
@@ -77,13 +71,14 @@
 			<groupId>org.xerial</groupId>
 			<artifactId>sqlite-jdbc</artifactId>
 			<version>3.7.2</version>
+            <scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.8.2</version>
 		</dependency>
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<directory>target</directory>
