Vcf and Bam manager indexer

--- a/opencga-cloud/conf/analysis.properties
+++ b/opencga-cloud/conf/analysis.properties
@@ -33,3 +33,4 @@ OPENCGA.SGE.MYSQL.Q.TOOLS = fatigo,fatiscan
 #############################################
 #CELLBASE.HOST = mem12:8080
 CELLBASE.HOST = ws.bionifo.cipf.es
+CELLBASE.NAME = cellbase
