--- a/opencga-cloud/analysis/pathiways/manifest.json
+++ b/opencga-cloud/analysis/pathiways/manifest.json
@@ -31,7 +31,9 @@
 	            	           {name:"control", description:"Control value.", required:"true"},
 	            	           {name:"disease", description:"Disease value.", required:"true"},
 	            	           {name:"platform", description:"Platform value.", required:"true"},
-	            	           {name:"exp-name", description:"Experiment name.", required:"true"}
+	            	           {name:"exp-name", description:"Experiment name.", required:"true"},
+	            	           {name:"test", description:"Comparison tests", required:"true"},
+	            	           {name:"paired", description:"Wilcoxon comparison test can be paired or not", required:"true"}
 	            	 ],
 	            	 configAttr: [],
 	            	 testCmd: "",
